<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lr">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/string_dollar"
            android:layout_width="match_parent"
            android:textSize="36sp"
            android:textAllCaps="true"
            android:textStyle="normal|bold"
            android:fontFamily="serif"
            android:textAlignment="viewStart"
            android:id="@+id/lblUsd" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/usa"
            android:id="@+id/USA"
            android:layout_weight="0.01"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="49.90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDollar"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:fontFamily="serif"
            android:textAlignment="viewEnd" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/month_rates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowMonthRates1"
            android:layout_weight="0.01" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_euro"
            android:textAlignment="viewStart"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:fontFamily="serif"
            android:id="@+id/lblEur" />

        <ImageView
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/euro"
            android:id="@+id/Europe"
            android:layout_width="match_parent" />

        <TextView

            android:text="60.66"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblEuro"
            android:textAlignment="viewEnd"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:textAllCaps="true"
            android:fontFamily="serif" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/month_rates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowMonthRates2"
            android:layout_weight="0.01" />

    </LinearLayout>

</LinearLayout>